// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Users /> should render a single device - signed by owner 1`] = `
<DocumentFragment>
  <div
    class="mx_DevTools_content"
  >
    <ul>
      <li>
        <div
          class="mx_CopyableText"
        >
          User ID: @alice:example.com
          <div
            aria-label="Copy"
            class="mx_AccessibleButton mx_CopyableText_copyButton"
            role="button"
            tabindex="0"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
              />
              <path
                d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
              />
            </svg>
          </div>
        </div>
      </li>
      <li>
        <div
          class="mx_CopyableText"
        >
          Device ID: SIGNED
          <div
            aria-label="Copy"
            class="mx_AccessibleButton mx_CopyableText_copyButton"
            role="button"
            tabindex="0"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
              />
              <path
                d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
              />
            </svg>
          </div>
        </div>
      </li>
      <li>
        Displayname: 
      </li>
      <li>
        <span>
          Verification status: 
          <div
            class="mx_E2EIcon mx_E2EIcon_inline"
            data-testid="e2e-icon"
          >
            <svg
              color="var(--cpd-color-icon-tertiary)"
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
              />
            </svg>
          </div>
           Signed by owner
        </span>
      </li>
      <li>
        Dehydrated: No
      </li>
      <li>
        Device keys
        <ul>
          <li>
            <div
              class="mx_CopyableText"
            >
              ed25519: an_ed25519_public_key
              <div
                aria-label="Copy"
                class="mx_AccessibleButton mx_CopyableText_copyButton"
                role="button"
                tabindex="0"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
                  />
                  <path
                    d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li>
            <div
              class="mx_CopyableText"
            >
              curve25519: a_curve25519_public_key
              <div
                aria-label="Copy"
                class="mx_AccessibleButton mx_CopyableText_copyButton"
                role="button"
                tabindex="0"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
                  />
                  <path
                    d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
                  />
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="mx_Dialog_buttons"
  >
    <button>
      Back
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Users /> should render a single device - unsigned 1`] = `
<DocumentFragment>
  <div
    class="mx_DevTools_content"
  >
    <ul>
      <li>
        <div
          class="mx_CopyableText"
        >
          User ID: @alice:example.com
          <div
            aria-label="Copy"
            class="mx_AccessibleButton mx_CopyableText_copyButton"
            role="button"
            tabindex="0"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
              />
              <path
                d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
              />
            </svg>
          </div>
        </div>
      </li>
      <li>
        <div
          class="mx_CopyableText"
        >
          Device ID: UNSIGNED
          <div
            aria-label="Copy"
            class="mx_AccessibleButton mx_CopyableText_copyButton"
            role="button"
            tabindex="0"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
              />
              <path
                d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
              />
            </svg>
          </div>
        </div>
      </li>
      <li>
        Displayname: 
      </li>
      <li>
        <span>
          Verification status: 
          <div
            class="mx_E2EIcon mx_E2EIcon_inline"
            data-testid="e2e-icon"
          >
            <svg
              color="var(--cpd-color-icon-critical-primary)"
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
              />
            </svg>
          </div>
           Not signed by owner
        </span>
      </li>
      <li>
        Dehydrated: No
      </li>
      <li>
        Device keys
        <ul>
          <li>
            <div
              class="mx_CopyableText"
            >
              ed25519: an_ed25519_public_key
              <div
                aria-label="Copy"
                class="mx_AccessibleButton mx_CopyableText_copyButton"
                role="button"
                tabindex="0"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
                  />
                  <path
                    d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li>
            <div
              class="mx_CopyableText"
            >
              curve25519: a_curve25519_public_key
              <div
                aria-label="Copy"
                class="mx_AccessibleButton mx_CopyableText_copyButton"
                role="button"
                tabindex="0"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
                  />
                  <path
                    d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
                  />
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="mx_Dialog_buttons"
  >
    <button>
      Back
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Users /> should render a single device - verified by cross-signing 1`] = `
<DocumentFragment>
  <div
    class="mx_DevTools_content"
  >
    <ul>
      <li>
        <div
          class="mx_CopyableText"
        >
          User ID: @alice:example.com
          <div
            aria-label="Copy"
            class="mx_AccessibleButton mx_CopyableText_copyButton"
            role="button"
            tabindex="0"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
              />
              <path
                d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
              />
            </svg>
          </div>
        </div>
      </li>
      <li>
        <div
          class="mx_CopyableText"
        >
          Device ID: VERIFIED
          <div
            aria-label="Copy"
            class="mx_AccessibleButton mx_CopyableText_copyButton"
            role="button"
            tabindex="0"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
              />
              <path
                d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
              />
            </svg>
          </div>
        </div>
      </li>
      <li>
        Displayname: 
      </li>
      <li>
        <span>
          Verification status: 
          <div
            class="mx_E2EIcon mx_E2EIcon_inline"
            data-testid="e2e-icon"
          >
            <svg
              color="var(--cpd-color-icon-success-primary)"
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.106 2.447a2 2 0 0 1 1.789 0l6 3A2 2 0 0 1 20 7.237V12c0 6.742-5.773 9.246-7.51 9.846-.32.111-.66.111-.98 0C9.774 21.246 4 18.743 4 12V7.236a2 2 0 0 1 1.105-1.789zm4.601 6.846a1 1 0 0 0-1.414 0L11 12.586l-1.293-1.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0 0-1.414"
                fill-rule="evenodd"
              />
            </svg>
          </div>
           Verified by cross-signing
        </span>
      </li>
      <li>
        Dehydrated: No
      </li>
      <li>
        Device keys
        <ul>
          <li>
            <div
              class="mx_CopyableText"
            >
              ed25519: an_ed25519_public_key
              <div
                aria-label="Copy"
                class="mx_AccessibleButton mx_CopyableText_copyButton"
                role="button"
                tabindex="0"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
                  />
                  <path
                    d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li>
            <div
              class="mx_CopyableText"
            >
              curve25519: a_curve25519_public_key
              <div
                aria-label="Copy"
                class="mx_AccessibleButton mx_CopyableText_copyButton"
                role="button"
                tabindex="0"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
                  />
                  <path
                    d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
                  />
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="mx_Dialog_buttons"
  >
    <button>
      Back
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Users /> should render a single user 1`] = `
<DocumentFragment>
  <div
    class="mx_DevTools_content"
  >
    <ul>
      <li>
        <div
          class="mx_CopyableText"
        >
          User ID: @alice:example.com
          <div
            aria-label="Copy"
            class="mx_AccessibleButton mx_CopyableText_copyButton"
            role="button"
            tabindex="0"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
              />
              <path
                d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
              />
            </svg>
          </div>
        </div>
      </li>
      <li>
        Membership: join
      </li>
      <li>
        <span>
          Displayname: 
          <i>
            None
          </i>
        </span>
      </li>
      <li>
        <span>
          Avatar: 
          <i>
            None
          </i>
        </span>
      </li>
      <li>
        <span>
          Verification status: 
          <div
            class="mx_E2EIcon mx_E2EIcon_inline"
            data-testid="e2e-icon"
          >
            <svg
              color="var(--cpd-color-icon-success-primary)"
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.106 2.447a2 2 0 0 1 1.789 0l6 3A2 2 0 0 1 20 7.237V12c0 6.742-5.773 9.246-7.51 9.846-.32.111-.66.111-.98 0C9.774 21.246 4 18.743 4 12V7.236a2 2 0 0 1 1.105-1.789zm4.601 6.846a1 1 0 0 0-1.414 0L11 12.586l-1.293-1.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0 0-1.414"
                fill-rule="evenodd"
              />
            </svg>
          </div>
           Verified
        </span>
      </li>
    </ul>
    <section>
      <h2>
        Cryptographic devices (3)
      </h2>
      <ul>
        <li>
          <button
            class="mx_DevTools_button"
          >
            <div
              class="mx_E2EIcon mx_E2EIcon_inline"
              data-testid="e2e-icon"
            >
              <svg
                color="var(--cpd-color-icon-success-primary)"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.106 2.447a2 2 0 0 1 1.789 0l6 3A2 2 0 0 1 20 7.237V12c0 6.742-5.773 9.246-7.51 9.846-.32.111-.66.111-.98 0C9.774 21.246 4 18.743 4 12V7.236a2 2 0 0 1 1.105-1.789zm4.601 6.846a1 1 0 0 0-1.414 0L11 12.586l-1.293-1.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0 0-1.414"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            VERIFIED
          </button>
        </li>
        <li>
          <button
            class="mx_DevTools_button"
          >
            <div
              class="mx_E2EIcon mx_E2EIcon_inline"
              data-testid="e2e-icon"
            >
              <svg
                color="var(--cpd-color-icon-tertiary)"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
                />
              </svg>
            </div>
            SIGNED
          </button>
        </li>
        <li>
          <button
            class="mx_DevTools_button"
          >
            <div
              class="mx_E2EIcon mx_E2EIcon_inline"
              data-testid="e2e-icon"
            >
              <svg
                color="var(--cpd-color-icon-critical-primary)"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
                />
              </svg>
            </div>
            UNSIGNED
          </button>
        </li>
      </ul>
    </section>
  </div>
  <div
    class="mx_Dialog_buttons"
  >
    <button>
      Back
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Users /> should render a user list 1`] = `
<DocumentFragment>
  <div
    class="mx_DevTools_content"
  >
    <div
      class="mx_Field mx_Field_input mx_TextInputDialog_input mx_DevTools_RoomStateExplorer_query"
    >
      <input
        autocomplete="off"
        id="mx_Field_1"
        label="Filter results"
        placeholder="Filter results"
        size="64"
        type="text"
        value=""
      />
      <label
        for="mx_Field_1"
      >
        Filter results
      </label>
    </div>
    No results found
    <form
      class="_root_19upo_16"
    >
      <div
        class="_inline-field_19upo_32"
      >
        <div
          class="_inline-field-control_19upo_44"
        >
          <div
            class="_container_udcm8_10"
          >
            <input
              checked=""
              class="_input_udcm8_24"
              id="_r_4_"
              role="switch"
              type="checkbox"
            />
            <div
              class="_ui_udcm8_34"
            />
          </div>
        </div>
        <div
          class="_inline-field-body_19upo_38"
        >
          <label
            class="_label_19upo_59"
            for="_r_4_"
          >
            Only joined users
          </label>
        </div>
      </div>
    </form>
  </div>
  <div
    class="mx_Dialog_buttons"
  >
    <button>
      Back
    </button>
  </div>
</DocumentFragment>
`;
